--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "sidebar"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "fast-xml-parser": "^5.3.5"
+  }
 }
